# SPDX-License-Identifier: GPL-2.0-or-later

load("//build/kernel/kleaf:kernel.bzl", "kernel_module")

kernel_module(
    name = "bcmdhd4389",
    srcs = glob([
        "**/*.c",
        "**/*.h",
        "Kbuild",
    ]) + [
        "//private/google-modules/whi-staging/soc/gs:gs_soc_headers",
    ],
    outs = [
        "bcmdhd4389.ko",
    ],
    kernel_build = "//private/google-modules/whi-staging/soc/gs:gs_kernel_build",
    visibility = [
        "//private/devices/google:__subpackages__",
        "//private/google-modules/whi-staging/soc/gs:__pkg__",
    ],
    deps = [
        "//private/google-modules/whi-staging/soc/gs:gs_soc_module",
    ],
)
